@startuml
class CustomScrollBar <<partial>> {
    + Maximum : int <<get>> <<set>>
    + Minimum : int <<get>> <<set>>
    + LargeChange : int <<get>> <<set>>
    + SmallChange : int <<get>> <<set>>
    + Value : int <<get>> <<set>>
    + MinimumThumbHeight : int <<get>> <<set>>
    +  <<event>> Scroll : EventHandler? 
    +  <<event>> ValueChanged : EventHandler? 
}
enum CustomScrollBarThumbState {
    Normal,
    Hover,
    Clicked,
}
CustomScrollBar --> "ThumbColor" Color
CustomScrollBar --> "ThumbHoverColor" Color
CustomScrollBar --> "ThumbClickedColor" Color
CustomScrollBar --> "ThumbCorderRadii" CornerRadiiF
CustomScrollBar --> "Padding" Padding
CustomScrollBar +-- CustomScrollBarThumbState
@enduml
